crates/cli/tests/snapshots/ports__ports_uninstall_removes_prepared_and_pv_owned_system_pf_artifacts.snap
---
source: crates/cli/tests/ports.rs
expression: "(output, environment.operations.borrow().clone())"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Deleted prepared pf anchor: <tempdir>/home/.pv/config/pf/com.prvious.pv\nDeleted prepared pf.conf reference: <tempdir>/home/.pv/config/pf/pf.conf\nRemoved PV-owned system pf redirect config\n",
        stderr: "",
    },
    [
        "remove pf <tempdir>/etc/pf.anchors/com.prvious.pv <tempdir>/etc/pf.conf via <tempdir>/home/.pv/config/pf",
    ],
)
